# torentchat

./: README.md
.github/workflows/: build-android.yml  build-cli.yml  build-desktop.yml  build-linux.yml  build-rust-all.yml  build-rust.yml  build-web.yml  deploy-worker.yml
.zcode/: .gitignore
.zcode/plans/: plan-sess_c8d79a07-7bc1-466a-b886-2f4ea1b01377.md
android-app/: build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/torentchat/: MainActivity.kt  TorentChatApp.kt
android-app/app/src/main/java/com/torentchat/crypto/: Envelope.kt  KeyStore.kt  SignalSessionManager.kt
android-app/app/src/main/java/com/torentchat/di/: AppModule.kt
android-app/app/src/main/java/com/torentchat/domain/: AbTestManager.kt
android-app/app/src/main/java/com/torentchat/identity/: IdentityManager.kt  InviteLink.kt  QrCodeGenerator.kt
android-app/app/src/main/java/com/torentchat/presence/: PresenceManager.kt
android-app/app/src/main/java/com/torentchat/signaling/: KVPendingStore.kt  SignalingClient.kt  SignalingMessage.kt
android-app/app/src/main/java/com/torentchat/webrtc/: DataChannelTransport.kt  P2pConnectionManager.kt  P2pConnectionService.kt  PeerConnectionWrapper.kt  WebRtcManager.kt
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/gradle/: libs.versions.toml
cli-app/: build.gradle.kts  settings.gradle.kts
cli-app/src/main/kotlin/com/torentchat/cli/: Main.kt
cli-app/src/main/kotlin/com/torentchat/cli/chat/: ChatService.kt
cli-app/src/main/kotlin/com/torentchat/cli/crypto/: Envelope.kt  SignalSessionManager.kt  TorentKeyStore.kt
cli-app/src/main/kotlin/com/torentchat/cli/data/: LocalStore.kt
cli-app/src/main/kotlin/com/torentchat/cli/identity/: IdentityManager.kt
cli-app/src/main/kotlin/com/torentchat/cli/signaling/: SignalingClient.kt
desktop-app/: build.gradle.kts  proguard-rules.pro  settings.gradle.kts
desktop-app/src/main/kotlin/com/torentchat/desktop/: Main.kt
docs/: ARCHITECTURE.md  CI_CD_SETUP.md  DEPLOY.md  SECURITY.md
linux-app/: build.gradle.kts  settings.gradle.kts
linux-app/src/main/kotlin/com/torentchat/linux/: Main.kt
linux-app/src/main/kotlin/com/torentchat/linux/ui/: Theme.kt  (+1 more)
rust-cli/: Cargo.toml
rust-cli/src/: main.rs
rust-workspace/: Cargo.toml
rust-workspace/android/: Cargo.toml
rust-workspace/android/.cargo/: config.toml
rust-workspace/android/app/src/main/: AndroidManifest.xml
rust-workspace/android/app/src/main/java/com/torentchat/: MainActivity.kt  TorentChatNative.kt
rust-workspace/android/src/: lib.rs
rust-workspace/cli/: Cargo.toml
rust-workspace/cli/src/: main.rs
rust-workspace/core/: Cargo.toml
rust-workspace/core/src/: chat.rs  crypto.rs  data.rs  identity.rs  lib.rs  signaling.rs
rust-workspace/desktop/: Cargo.toml
rust-workspace/desktop/src/: main.rs
rust-workspace/web/: Cargo.toml
rust-workspace/web/src/: main.rs
rust-workspace/worker/: Cargo.toml  package.json  tsconfig.json  wrangler.toml
rust-workspace/worker/src/: index.ts  lib.rs  pending.ts  presence.ts  router.ts  signaling.ts
tests/: e2e-simulation.js  e2e-worker.js
web-app/: .gitignore  package.json  tailwind.config.js
web-app/src/app/: globals.css  layout.tsx  page.tsx
web-app/src/lib/: chat.ts  crypto.ts  identity.ts  signaling.ts
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: abtesting.ts  index.ts  pending.ts  presence.ts  router.ts  signaling.ts
(+43 files in other folders)
