[package]
name = "torentchat"
version = "0.1.0"
edition = "2021"
description = "P2P encrypted chat — CLI (Rust native binary)"
license = "MIT"

[[bin]]
name = "torentchat"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Crypto: ring (ECDH P-256 + AES-GCM)
ring = "0.17"
# Base64
base64 = "0.22"
# CLI
rustyline = "14"
# Logging
log = "0.4"
env_logger = "0.11"
# Error handling
anyhow = "1"
# UUID
uuid = { version = "1", features = ["v4"] }
# Random
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
