[package]
name = "torentchat"
version = "0.1.0"
edition = "2021"
description = "P2P encrypted chat — Rust native binary"
license = "MIT"

[[bin]]
name = "torentchat"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
p256 = { version = "0.13", features = ["ecdh", "pem"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
rand = "0.8"
rand_core = "0.6"
