[workspace]
members = ["core", "cli", "desktop", "web", "worker", "android"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
torentchat-core = { path = "core" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
