[package]
name = "torentchat-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
x25519-dalek.workspace = true
aes-gcm.workspace = true
base64.workspace = true
sha2.workspace = true
uuid.workspace = true
anyhow.workspace = true
rand.workspace = true
