[package]
name = "torentchat-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "torentchat-web"
path = "src/main.rs"

[dependencies]
torentchat-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
axum = "0.7"
serde.workspace = true
serde_json.workspace = true
